# bodyshield-final-all-in-one-pack

./: .gitattributes  .gitignore  BODYSHIELD_FINAL_PLAN.md  CITATION.cff  CLI_AGENT_MASTER_PROMPT.md  EXPERIMENT_MATRIX_MAXOUT.csv  GITHUB_REPO_NOTE.md  HARDWARE_AUTONOMOUS_CLI_RUNBOOK.md  LICENSE  MUJOCO_LOG.TXT  Makefile  NON_HARDWARE_COMPLETION_PROTOCOL.md  NO_HARDWARE_AND_THEORY_DECISION_MEMO.md  README.md  README_EXECUTION.md  README_FIRST.md  REPRODUCE.md  REVIEWER_ATTACK_CLOSURE_MATRIX.md  SAFE_ROBOT_API_SPEC.md  SOURCE_NOTES_FOR_VERIFICATION.md  data_schema.json  environment.yml  pyproject.toml  requirements.txt  tasks.yaml  trial_schema.schema.json
bodyshield/: __init__.py  _legacy.py  artifact_inventory_audit.py  bodybreak.py  bodybreak_search.py  bodyshield.py  bodyshield_repair.py  claim_boundary_audit.py  command_surface_audit.py  config_schema_audit.py  corrective_adaptation.py  corrective_trace_readiness.py  derived_results_audit.py  environment_audit.py  evidence_consistency.py  external_policy_benchmark.py  high_fidelity.py  high_fidelity_learning.py  learned_outcome_model.py  logging_utils.py  metrics.py  neural_wam.py  pack_verification.py  paper_source_audit.py  perturbations.py  plotting.py  policies.py  portable_hygiene_audit.py  public_checkpoint_benchmark.py  real_video_wam_readiness.py  release_bundle.py  release_determinism_audit.py  release_payload_audit.py  release_runtime_audit.py  repair.py  results_integrity.py  safe_robot_runner.py  schema.py  self_trained_public_env.py  sim.py  (+8 more)
configs/: corrective_trace_readiness.example.json  (+5 more)
(+364 files in other folders)
